Second commit to check user details

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 A Codeigniter library to encode data into the JSON data format for PHP versions lower than 5.2
+
+@author Nick Pyett (contact@nickpyett.com)
